library/pod-security-policy/seccomp/samples/psp-seccomp/example_allowed3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-seccomp-allowed3
  labels:
    app: nginx-seccomp
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault 
  containers:
  - name: nginx
    image: nginx
