library/pod-security-policy/seccomp/samples/psp-seccomp/example_disallowed3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-seccomp-disallowed3
  labels:
    app: nginx-seccomp
spec:
  securityContext:
    seccompProfile:
      type: Unconfined
  containers:
  - name: nginx
    image: nginx
