library/pod-security-policy/seccomp/samples/psp-seccomp/example_disallowed_localhost.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-seccomp-disallowed-localhost
  labels:
    app: nginx-seccomp
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      seccompProfile:
        type: Localhost
        localhostProfile: profile.log
